# museg

./: .gitignore  README.md  build.ps1  pyproject.toml  run_labeler.py  test_label_editor.py
src/: __init__.py  app.py  main.py
src/audio/: __init__.py  processor.py
src/core/: __init__.py  config.py  label_manager.py
src/labler/: __main__.py  app.py
src/labler/core/: label_manager.py  music_library.py
src/labler/ui/: label_bar.py  label_buttons.py  left_panel.py
src/ui/: __init__.py  audio_controls.py  label_bar.py  label_editor.py  left_panel.py  music_list_widget.py  right_panel.py  waveform_widget.py
src/utils/: __init__.py
